--- a/config.ini
+++ b/config.ini
@@ -1,8 +1,8 @@
 [controls]
-left = Left
-right = Right
-up = Up
-down = Down
+left = A
+right = D
+up = W
+down = S
 escape = Escape
 debug = F
 editor = O
