added 3d cube rendering with basic colors. updated config to support WASD and fixed bug with using strstr in config loading. moved input key data into the config directory. added two 3d sample programs, one is the wolfenstein maze, and one is a spinning cube.

--- a/config.ini
+++ b/config.ini
@@ -1,8 +1,12 @@
 [controls]
-left = A
-right = D
-up = W
-down = S
+left = Left
+right = Right
+up = Up
+down = Down
 escape = Escape
 debug = F
 editor = O
+w = W
+a = A
+s = S
+d = D
